# opcua-ffi

./: .gitignore  README.md  analysis_options.yaml  flake.nix  pubspec.yaml  set_env.sh
.github/workflows/: dart.yml
example/: README.md  pubspec.yaml
frb_utils/: README.md  pubspec.yaml
lib/: main.dart
lib/src/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart  lib.dart
lib/src/rust/api/: minimal.dart
lib/src/rust/api/minimal/: wrap.dart
lib/src/rust/api/types/: byte_string.dart  data_value.dart  date_time.dart  enums.dart  guid.dart  monitored_item.dart  monitored_item_create_request.dart  monitored_item_create_result.dart  node_id.dart  node_id.freezed.dart  status_code.dart  string.dart  variant.dart  variant.freezed.dart  write_value.dart
rust/: .gitignore  Cargo.toml
rust/src/: frb_generated.rs  lib.rs
rust/src/api/: minimal.rs  mod.rs
rust/src/api/types/: byte_string.rs  data_value.rs  date_time.rs  enums.rs  guid.rs  mod.rs  monitored_item.rs  monitored_item_create_request.rs  monitored_item_create_result.rs  node_id.rs  status_code.rs  string.rs  variant.rs  write_value.rs
test/: minimal_test.dart
