[package]
name = "opcua_ffi"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.90"
chrono = "0.4.38"
delegate-attr = "0.3.0"
flutter_rust_bridge = { version = "2.5.1", features = ["uuid"] }
opcua = { git = "https://github.com/einarmo/opcua.git", branch = "async-server", features = ["client", "console-logging"] }
tokio = { version = "1.41.0", features = ["rt-multi-thread", "macros"] }
