[package]
name = "opcua_ffi"
version = "0.0.1"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.90"
chrono = "0.4.38"
delegate-attr = "0.3.0"
flutter_rust_bridge = "2.8.0"
log = "0.4.25"
opcua = { git = "https://github.com/locka99/opcua.git", branch = "master", commit = "fcc89d8f8b93b5a0943ec8086706e883900faa3c", features = [
    "client",
    "console-logging",
] }
tokio = { version = "1.41.0", features = ["rt-multi-thread", "macros"] }
